pi/cluster/apps/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: pihole
  namespace: pihole
spec:
  rules:
    - host: "pihole.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pihole-web
                port:
                  number: 80
